[package]
name = "disc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dsf-core = "0.3.0"
dsf-client = "0.3.0"
dsf-rpc = "0.3.0"
dsf-iot = "0.1.0"

anyhow = "1.0.71"
clap = { version = "4.3.0", features = [ "derive", "env" ] }
tokio = { version = "1.28.1", features = [ "full" ]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
serde = "1.0.163"
serde_json = "1.0.96"

