[package]
name = "disc"
version = "0.1.0"
edition = "2021"

default-run = "disc-eval"

[dependencies]

dsf-core = "0.3.0"
dsf-client = "0.3.0"
dsf-rpc = "0.3.0"
dsf-iot = "0.1.0"
kad = { git = "https://github.com/ryankurte/rust-kad.git", branch = "main" }

anyhow = "1.0.71"
clap = { version = "4.3.0", features = [ "derive", "env" ] }
tokio = { version = "1.28.1", features = [ "full", "rt-multi-thread" ]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
serde = "1.0.163"
serde_json = "1.0.96"
humantime = "2.1.0"
rolling-stats = { version = "0.7.0", features = [ "serde" ] }
chrono = "0.4.24"
futures = "*"
async-trait = "*"

sha2 = { version = "0.8.1", default_features = false }
rand = "*"

[[bin]]
name = "disc-eval"
path = "src/main.rs"

[[bin]]
name = "kad-eval"
path = "src/kad.rs"
