[package]
name = "iot-perf"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

exclude = [ "*.toml" ]
default-run = "iot-perf-eval"

[dependencies]
paho-mqtt = "0.9.1"
serde = { version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
simplelog = "0.8.0"
structopt = "0.3.16"
async-trait = "0.1.38"

log = { version = "0.4.11", features = [ "release_max_level_trace", "max_level_trace" ] }

humantime = "2.0.1"
humantime-serde = "1.0.0"
async-timer = "0.7.4"
bollard = "0.11.1"
bincode = "1.3.1"
clap = "2.33.3"
rolling-stats = { version = "0.7.0", features = [ "serde" ] }
byteorder = "1.3.4"
rand = "0.7.3"
csv = "1.1.3"
serde_json = "1.0.57"
anyhow = "1.0.38"
itertools = "0.9.0"
handlebars = "3.5.0"
string_template = "0.2.1"
thiserror = "1.0.23"
udp-dtls = "0.1.0"
coap-client = "0.3.1"
strum_macros = "0.20.1"
strum = "0.20.0"
cbor = "0.4.1"
serde_cbor = "0.11.1"
console-subscriber = "0.1.2"

tokio = { version = "1.16.1", features = [ "full", "macros" ] }
futures = { version = "0.3.21", features = ["compat"] }

dsf-core = "0.3.0"
dsf-rpc = "0.3.0"
dsf-client = "0.3.0"
dsf-iot = "0.1.0"


[dependencies.futures_v1]
package = "futures"
version = "0.1.0"

[dev-dependencies]
float-cmp = "0.8.0"


[[bin]]
name = "iot-perf-eval"
path = "src/bin/eval.rs"

[[bin]]
name = "iot-perf-reduce"
path = "src/bin/reduce.rs"
