[package]
name = "smol-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_json = "1.0.68"
structopt = "0.3.23"
strum = "0.21.0"
strum_macros = "0.21.1"


[[bin]]
name = "cbor-util"
path = "src/cbor_util.rs"
