[package]
name = "smol-utils"
version = "0.1.0"
edition = "2018"

[features]
default = [ "dsf-iot/std" ]

[dependencies]
anyhow = "1.0.44"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_json = "1.0.68"
structopt = "0.3.23"
strum = "0.21.0"
strum_macros = "0.21.1"
async-std = { version = "1.4.0", features = ["attributes"] }
log = "0.4.14"

dsf-core = "0.3.0"
dsf-rpc = "0.3.0"
dsf-client = "0.3.0"
dsf-iot = "0.1.0"


[[bin]]
name = "cbor-util"
path = "src/cbor_util.rs"

[[bin]]
name = "dsf-util"
path = "src/dsf_util.rs"


[[bin]]
name = "dsf-bench"
path = "src/dsf_bench.rs"
